istio/canary-deployment.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: auth-canary
  namespace: ecommerce-prod
spec:
  hosts:
  - auth-service
  http:
  - route:
    - destination:
        host: auth-service
        subset: v1
      weight: 90  # 90% to stable version
    - destination:
        host: auth-service
        subset: v2
      weight: 10  # 10% to canary version
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: auth-destination
  namespace: ecommerce-prod
spec:
  host: auth-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
