istio/fault-injection.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-fault-injection
  namespace: shopflow-prod
spec:
  hosts:
  - product-service
  http:
  - fault:
      delay:
        percentage:
          value: 0.1  # 10% of requests
        fixedDelay: 5s
      abort:
        percentage:
          value: 0.01  # 1% of requests
        httpStatus: 500
    route:
    - destination:
        host: product-service
